--- a/web/sites/games/config/sync/views.view.games_collection_entities.yml
+++ b/web/sites/games/config/sync/views.view.games_collection_entities.yml
@@ -31,7 +31,7 @@ display:
         type: none
         options: {  }
       cache:
-        type: none
+        type: tag
         options: {  }
       query:
         type: views_query
@@ -888,15 +888,33 @@ display:
           field_api_classes: false
           plugin_id: field
       pager:
-        type: none
+        type: full
         options:
+          items_per_page: 125
           offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          quantity: 9
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
+        - url.query_args
       tags:
         - 'config:field.storage.games_collection.field_game_category'
         - 'config:field.storage.games_collection.field_games'
