--- a/web/sites/games/config/sync/views.view.arcade_collection_entities.yml
+++ b/web/sites/games/config/sync/views.view.arcade_collection_entities.yml
@@ -432,6 +432,7 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      group_by: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -757,7 +758,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_id
           settings: {  }
-          group_column: target_id
+          group_column: entity_id
           group_columns: {  }
           group_rows: 0
           delta_limit: '0'
@@ -769,6 +770,7 @@ display:
       defaults:
         fields: false
         sorts: false
+        group_by: false
       sorts:
         field_type_target_id:
           id: field_type_target_id
@@ -782,24 +784,26 @@ display:
           expose:
             label: ''
           plugin_id: standard
-        name:
-          id: name
+        created:
+          id: created
           table: arcade_collection_field_data
-          field: name
+          field: created
           relationship: none
           group_type: group
           admin_label: ''
-          order: ASC
+          order: DESC
           exposed: false
           expose:
             label: ''
+          granularity: second
           entity_type: arcade_collection
-          entity_field: name
-          plugin_id: standard
+          entity_field: created
+          plugin_id: date
       pager:
         type: none
         options:
           offset: 0
+      group_by: true
     cache_metadata:
       max-age: -1
       contexts:
