--- a/web/sites/games/config/sync/views.view.games_collection_entities.yml
+++ b/web/sites/games/config/sync/views.view.games_collection_entities.yml
@@ -615,23 +615,27 @@ display:
           expose:
             label: ''
           plugin_id: standard
-        name:
-          id: name
+        created:
+          id: created
           table: games_collection_field_data
-          field: name
+          field: created
           relationship: none
           group_type: group
           admin_label: ''
-          order: ASC
+          order: DESC
           exposed: false
           expose:
             label: ''
+          granularity: second
           entity_type: games_collection
-          entity_field: name
-          plugin_id: standard
+          entity_field: created
+          plugin_id: date
       defaults:
         sorts: false
         fields: false
+        group_by: false
+        filters: false
+        filter_groups: false
       fields:
         name:
           id: name
@@ -876,7 +880,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_id
           settings: {  }
-          group_column: target_id
+          group_column: entity_id
           group_columns: {  }
           group_rows: false
           delta_limit: 0
@@ -888,33 +892,61 @@ display:
           field_api_classes: false
           plugin_id: field
       pager:
-        type: full
+        type: none
         options:
-          items_per_page: 125
           offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
+      group_by: true
+      filters:
+        langcode:
+          id: langcode
+          table: games_collection_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
           expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          quantity: 9
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: games_collection
+          entity_field: langcode
+          plugin_id: language
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
-        - url.query_args
       tags:
         - 'config:field.storage.games_collection.field_game_category'
         - 'config:field.storage.games_collection.field_games'
