--- a/web/sites/mobile-casino/config/sync/views.view.duplicate_of_games_list.yml
+++ b/web/sites/mobile-casino/config/sync/views.view.duplicate_of_games_list.yml
@@ -266,10 +266,26 @@ display:
       display_extenders: {  }
       path: api/games_list_v2
       pager:
-        type: some
+        type: full
         options:
-          items_per_page: 2
+          items_per_page: 150
           offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          quantity: 9
       style:
         type: taxonomy_list_serializer
         options:
@@ -1709,6 +1725,7 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
+        - url.query_args
         - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.field_disable_game_loader'
