--- a/web/sites/mobile-live-dealer/config/sync/views.view.games_list.yml
+++ b/web/sites/mobile-live-dealer/config/sync/views.view.games_list.yml
@@ -2034,11 +2034,11 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        weight_export:
-          id: weight_export
-          table: taxonomy_term_field_data
-          field: weight_export
-          relationship: field_lobby_tab
+        weight:
+          id: weight
+          table: draggableviews_structure
+          field: weight
+          relationship: none
           group_type: group
           admin_label: ''
           label: ''
@@ -2082,25 +2082,20 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: number_integer
-          settings:
-            thousand_separator: ''
-            prefix_suffix: 1
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          field_api_classes: 0
-          entity_type: taxonomy_term
-          entity_field: weight
-          plugin_id: field_export
+          set_precision: false
+          precision: 0
+          decimal: .
+          separator: ','
+          format_plural: false
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
+          plugin_id: numeric
       defaults:
         fields: false
         relationships: false
+        filters: false
+        filter_groups: false
       style:
         type: node_field_serializer
         options:
@@ -2127,23 +2122,185 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
-      relationships:
-        field_lobby_tab:
-          id: field_lobby_tab
-          table: node__field_lobby_tab
-          field: field_lobby_tab
+      relationships: {  }
+      filters:
+        type:
+          id: type
+          table: node_field_data
+          field: type
           relationship: none
           group_type: group
-          admin_label: field_lobby_tab
-          required: false
-          plugin_id: standard
+          admin_label: ''
+          operator: in
+          value:
+            games: games
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+        langcode:
+          id: langcode
+          table: node_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: langcode
+          plugin_id: language
+        status:
+          id: status
+          table: node_field_data
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: status
+          plugin_id: boolean
+        field_lobby_tab_target_id:
+          id: field_lobby_tab_target_id
+          table: node__field_lobby_tab
+          field: field_lobby_tab_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_lobby_tab_target_id_op
+            label: 'Lobby Tab (field_lobby_tab)'
+            description: ''
+            use_operator: false
+            operator: field_lobby_tab_target_id_op
+            identifier: obby_tab
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: lobby_tab
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
+        - url
         - url.query_args
+        - user
         - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.field_game_code'
