--- a/web/sites/jamboree-casino/config/sync/core.extension.yml
+++ b/web/sites/jamboree-casino/config/sync/core.extension.yml
@@ -37,6 +37,7 @@ module:
   image: 0
   imce: 0
   jamboree_404: 0
+  jamboree_arcade: 0
   jamboree_big_winner: 0
   jamboree_config: 0
   jamboree_desktop_blocks: 0
