--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
@@ -3,6 +3,8 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_category
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_filter
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_client_type
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_free_play
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game
@@ -16,9 +18,11 @@ dependencies:
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_tag
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_thumbnail
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_title
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_type
     - image.style.thumbnail
   module:
     - conditional_fields
+    - entity_reference_views_select
     - field_group
     - image
     - text
@@ -30,7 +34,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 10
+      weight: 11
       format_type: fieldset
       format_settings:
         id: ''
@@ -42,7 +46,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 11
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -50,6 +54,19 @@ third_party_settings:
         description: 'fields for games page'
         required_fields: true
       label: 'Games (for games page)'
+    group_arcade_for_arcade_page_:
+      children:
+        - field_arcade_game_category
+        - field_arcade_game_filter
+      parent_name: ''
+      weight: 13
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: false
+      label: 'Arcade (for arcade page)'
 _core:
   default_config_hash: ppcWsjWMjCM-R4co2Kyb0QkF-5uQSF7-XGv_SCHeWjg
 id: zipang_desktop_games_entity.zipang_desktop_games_entity.default
@@ -57,6 +74,18 @@ targetEntityType: zipang_desktop_games_entity
 bundle: zipang_desktop_games_entity
 mode: default
 content:
+  field_arcade_game_category:
+    weight: 14
+    settings: {  }
+    third_party_settings: {  }
+    type: erviews_options_buttons
+    region: content
+  field_arcade_game_filter:
+    weight: 15
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_client_type:
     weight: 6
     settings: {  }
@@ -118,7 +147,7 @@ content:
     type: string_textfield
     region: content
   field_game_description:
-    weight: 13
+    weight: 14
     settings:
       rows: 9
       summary_rows: 3
@@ -175,7 +204,7 @@ content:
     type: options_select
     region: content
   field_game_provider:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -202,6 +231,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_game_type:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   langcode:
     type: language_select
     weight: 2
@@ -209,11 +244,7 @@ content:
     settings:
       include_locked: true
     third_party_settings: {  }
-  translation:
-    weight: 12
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   name: true
+  translation: true
   user_id: true
