--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
@@ -3,6 +3,8 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_category
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_filter
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_client_type
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_free_play
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game
@@ -16,6 +18,7 @@ dependencies:
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_tag
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_thumbnail
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_title
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_type
   module:
     - image
     - options
@@ -29,6 +32,22 @@ targetEntityType: zipang_desktop_games_entity
 bundle: zipang_desktop_games_entity
 mode: default
 content:
+  field_arcade_game_category:
+    weight: 14
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_arcade_game_filter:
+    weight: 15
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_client_type:
     weight: 8
     label: above
@@ -135,6 +154,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_type:
+    weight: 16
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   name:
     label: above
