--- a/web/sites/zipang-casino/config/sync/core.extension.yml
+++ b/web/sites/zipang-casino/config/sync/core.extension.yml
@@ -94,6 +94,7 @@ module:
   webform_rest: 0
   webform_ui: 0
   zipang_404: 0
+  zipang_all_games_config: 0
   zipang_big_winner: 0
   zipang_config: 0
   zipang_desktop_blocks: 0
